--- a/618.html
+++ b/618.html
@@ -106,6 +106,8 @@
         jsBtn.style.marginTop = '34px'
         jsBtn.style.fontSize = '20px'
         jsBtn.style.borderRadius = '10px'
+
+        window.location.href = "taobao://";
       }
     </script>
   </body>
